# 7574-TP1

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  notifications.ini  pyproject.toml  sample_settings.ini
docker/: client-Dockerfile  docker-compose-scenario1.yaml  docker-compose-scenario2.yaml  docker-compose-scenario3.yaml  docker-compose-scenario4.yaml  docker-compose.yaml  server-Dockerfile
docker/notification_configs/: notifications.ini  notifications1.ini  notifications4.ini
informe/: informe.bib  informe.tex
metrics_server/: constants.py  exceptions.py  protocol.py  utils.py
metrics_server/cli/: server.py
metrics_server/client/: cli.py  client.py
metrics_server/server/: cli.py  metrics.py  notifications.py  queries.py  server.py
tests/: test_metrics_server.py
