[tool.poetry]
name = "metrics_server"
version = "0.1.0"
description = "TP1 para 7574 - Distribuidos I."
authors = ["CrossNox <ijmermet@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
isort = "^5.9.3"
mypy = "^0.910"
pre-commit = "^2.15.0"
bump2version = "^1.0.1"
flake8 = "^3.9.2"

[tool.poetry.scripts]
metrics_client = "metrics_server.cli.client:app()"
metrics_server = "metrics_server.cli.server:app()"

[tool.black]
line-length = 88

[tool.isort]
line_length=88
indent='    '
multi_line_output=3
length_sort=true
use_parentheses=true
include_trailing_comma=true
force_sort_within_sections=true
known_first_party="metrics_server"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
